# httpgate

./: .gitignore  Cargo.toml  Dockerfile
.github/: dependabot.yaml
.github/workflows/: release.yml
chart/: values.yaml
chart/templates/: ingress.yaml
src/: config.rs  main.rs  proxy.rs  registry.rs  watcher.rs
