[package]
name = "httpgate"
version = "0.1.0"
edition = "2021"

[dependencies]
pingora = { version = "0.5", features = ["lb"] }
pingora-core = "0.5"
pingora-proxy = "0.5"
pingora-http = "0.5"
pingora-load-balancing = "0.5"

kube = { version = "0.98", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }

schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
regex = "1"
once_cell = "1"
futures = "0.3"
anyhow = "1"
dashmap = "6"
